@@ -1,3 +1,11 @@
+2022-11-15  Dirk Eddelbuettel  <edd@debian.org>
+
+ 	* src/formatter.cpp (formatter): Add formatting helper which passes
+	logging string to fmt::format() enable fmt's "format" from R
+	* src/RcppExports.cpp: Ditto
+	* R/RcppExports.R (formatter): Ditto
+	* man/formatter.Rd: Docs
+
 2022-11-14  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro release version
